# zek-system-monitor

./: .gitignore  COMPLETED_MEDIUM_TERM_FEATURES.md  Cargo.toml  FEATURES_COMPLETION_SUMMARY.md  FEATURES_DISPLAYED.md  FEATURE_ROADMAP.md  GLANCES_ARCHITECTURE.mmd  IMPLEMENTED_FEATURES.md  MEDIUM_TERM_FEATURES_IMPLEMENTATION.md  README.md  RUNNING.md  TERMINAL_SETUP.md  TROUBLESHOOTING.md  USAGE.md  ZEK_ARCHITECTURE.mmd  ZEK_VS_GLANCES.mmd  ZEK_VS_GLANCES_COMPARISON.md  layout.md
apps/zek-agent/: Cargo.toml
apps/zek-agent/src/: main.rs
apps/zek-cli/: Cargo.toml
apps/zek-cli/src/: main.rs
apps/zek-gateway/: Cargo.toml
apps/zek-gateway/src/: main.rs
apps/zek-tui/: Cargo.toml
apps/zek-tui/src/: main.rs
clients/check-web-ui/: package.json
configs/: zek.toml
crates/alerts/: Cargo.toml
crates/alerts/src/: lib.rs
crates/anomaly/: Cargo.toml
crates/anomaly/src/: lib.rs
crates/core-metrics/: Cargo.toml
crates/core-metrics/src/: api_test.rs  cfg.rs  debug_test.rs  lib.rs  main.rs  ringbuf.rs  sysinfo_test.rs  test_sysinfo.rs
crates/core-metrics/src/collectors/: connections.rs  containers.rs  cpu_mem.rs  disk.rs  gpu.rs  load.rs  mod.rs  net.rs  process.rs  process_tree.rs  sensors.rs  snapshot.rs  system.rs
crates/exporters/csv/: Cargo.toml
crates/exporters/csv/src/: lib.rs
crates/exporters/influx/: Cargo.toml
crates/exporters/influx/src/: lib.rs
crates/exporters/jsonl/: Cargo.toml
crates/exporters/jsonl/src/: lib.rs
crates/exporters/otlp/: Cargo.toml
crates/exporters/otlp/src/: lib.rs
crates/exporters/prometheus/: Cargo.toml
crates/exporters/prometheus/src/: lib.rs
crates/exporters/sqlite_parquet/: Cargo.toml
crates/exporters/sqlite_parquet/src/: lib.rs
crates/probes/: Cargo.toml
crates/probes/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: lib.rs
scripts/: check.bat  check.ps1  dev_run_agent.sh  dev_run_gateway.sh  dev_run_tui.sh  gen_selfsigned_certs.sh
