[package]
name = "core-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros"] }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }